--- a/members/templates/Channel/userchannel.html
+++ b/members/templates/Channel/userchannel.html
@@ -793,7 +793,7 @@ $(document).ready(function() {
                     <div id="progress-bar-fill" style="width:{{ percentage }}%"></div>
                   </div>
                   
-                <a href="https://www.instagram.com/create/story/" target="_blank"> <button id="shareButton" class="sexysex-button share-button"
+                <a href="https://www.instagram.com/create/story/" target="_blank" style="text-decoration: none;"> <button id="shareButton" class="sexysex-button share-button"
                   data-title="{{ project.project_title }}"
                   data-thumbnail="{{ project.project_thumbnail.url }}"
                   data-url="{{ request.build_absolute_uri }}">
