--- a/members/templates/donation/donation_landing_page.html
+++ b/members/templates/donation/donation_landing_page.html
@@ -97,8 +97,8 @@ input.donation-box::-webkit-outer-spin-button {
         </div> 
         <ul class="navbar-nav">
        
-        <a href="{% url 'user_channel' username=project.user %}" class="vinsmoke"><li><i class="fas fa-arrow-alt-circle-down fa-rotate-90"></i>
-            Fundraiser</li></a> 
+        <a href="{% url 'user_channel' username=project.user %}" class="vinsmoke"><li><i class="fas fa-arrow-alt-circle-down fa-rotate-90 fa-lg"></i>
+            </li></a> 
 
           {% if user.is_authenticated %}
           <li>
