--- a/members/static/donationstyle.css
+++ b/members/static/donationstyle.css
@@ -271,7 +271,6 @@ body{
 
 @media(max-width:851px){
   .navbar-nav{
-    height: 4.8rem;
     justify-content: space-between;
     margin-right: 6vw;
     margin-left: 6vw;
@@ -330,7 +329,7 @@ body{
   }
 
  body{
-  margin-top: 4.4rem;
+  margin-top:2rem;
  }
  h1{
   font-size: 2rem;
@@ -387,9 +386,6 @@ body{
     top: 5px;
   }
 
- body{
-  margin-top: 4rem;
- }
  h1{
   font-size: 1.6rem;
  }
@@ -445,9 +441,9 @@ body{
    }
 
    .logo{
-width: 90px;
-height: 90px;
-top: 10px;
+width: 100px;
+height: 100px;
+top: 10px
 
 
    }
