--- a/static/fundingnowstyle.css
+++ b/static/fundingnowstyle.css
@@ -262,6 +262,7 @@ body{
       display: -webkit-box;
       -webkit-line-clamp: 2; /* Number of lines to show */
       -webkit-box-orient: vertical;
+      max-width: 375px;
     }
     .search-form {
       display: flex;
