--- a/members/static/fundingnowstyle.css
+++ b/members/static/fundingnowstyle.css
@@ -262,7 +262,7 @@ body{
       display: -webkit-box;
       -webkit-line-clamp: 2; /* Number of lines to show */
       -webkit-box-orient: vertical;
-      min-width: 350px;
+      min-width: 375px;
     }
     .search-form {
       display: flex;
@@ -315,7 +315,7 @@ body{
       font-family: 'Lato', sans-serif; font-size: 1.4rem; margin-left: 10px; margin-right: 10px; font-weight: 300;
     }
     .description{
-      font-family: 'Montserrat', sans-serif; font-weight: 200; font-size: 1rem; color: gray; margin-left: 10px; margin-right: 10px;
+      font-family: 'Montserrat', sans-serif; font-weight: 200; font-size: 1rem; color: gray; margin-left: 10px; margin-right: 10px; max-width: 280px;
     }
     .username{
       font-family: 'Lato', sans-serif; font-weight: 100; font-size: small; margin: 0; padding: 0;
