--- a/members/templates/projects/funding_now.html
+++ b/members/templates/projects/funding_now.html
@@ -138,7 +138,7 @@
 
 </header>
 <body>
-  <div style="display: flex; flex-direction: column; width: 100vw; height: auto; align-items: center; justify-content: center;">
+  <div style="display: flex; flex-direction: column; width: 100vw; height: auto; align-items: center; justify-content: center; position: relative; right: 5px;">
     
     <div class="search-form">
       <form action="{% url 'search_projects' %}" method="GET">
