--- a/members/static/donationstyle.css
+++ b/members/static/donationstyle.css
@@ -108,6 +108,41 @@ body{
     margin-bottom: 0.8em;
     
 }
+.name-box{
+    
+  width: calc(45% - 20px);
+  height: 45px;
+  padding-left: 20px;
+  font-size: 0.8rem;
+  color: #000;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  border-radius: 15px;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  font-family: 'Lato', sans-serif;
+  margin-top: 10px;
+  margin-bottom: 0.8em;
+  
+}
+
+.email-box{
+    
+  width: calc(100% - 20px);
+  height: 45px;
+  padding-left: 20px;
+  font-size: 0.8rem;
+  color: #000;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  border-radius: 15px;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  font-family: 'Lato', sans-serif;
+  margin-top: 10px;
+  margin-bottom: 0.8em;
+  
+}
+
+
 .thumbnail{
   width: 40%; height: auto;
 }
@@ -201,7 +236,9 @@ body{
   border-radius: 5px;
   outline: none;
 }
-
+.bab{
+display: flex; flex-direction: row; justify-content: space-between;
+}
 .carddetails{
   margin-top: 20px;
   width: 90%;
@@ -228,6 +265,9 @@ body{
 .eminem{
   position: relative; top:38px; left: 30px; font-family: 'Lato',sans-serif;
 }
+.nunu{
+  margin-left: 5%; margin-right: 5%;
+}
 
 @media(max-width:1001px){
   .container{
@@ -241,6 +281,17 @@ body{
   }
  .kodakblack{
   margin-top: 0;
+ }
+ .bab{
+  flex-direction: column;
+  justify-content: initial;
+  align-items: initial;
+ }
+ .name-box{
+  width: calc(100% - 20px );
+ }
+ .nunu{
+  margin-left: 0; margin-right: 0;
  }
  .boat{
   flex-direction: row; gap: 5px; width: 100%;
@@ -441,12 +492,10 @@ body{
    }
 
    .logo{
-width: 100px;
-height: 100px;
-top: 10px
-
-
-   }
+    width: 110px;
+    height: 110px;
+    top: 10px;
+       }
 
    .dropdown img{
     width: 37px;
