--- a/members/static/fundingnowstyle.css
+++ b/members/static/fundingnowstyle.css
@@ -1,8 +1,4 @@
-.fuck{
-  color: black;
-  font-family: 'Raleway', sans-serif;
-  font-weight: 600;
-}
+
 
 .donate-btn-burger {
   background-color: #28a745;
@@ -67,18 +63,27 @@
   display: flex;
   flex-direction: column;
   height: 100%;
-  padding-top: 10vh;
-  font-size: 24px;
+
   color: #fff;
   margin-left: 5%;
-  gap: 35px;
+  gap: 20px;
+  padding-top: 50px;
+ 
+}
+.fuck{
+  color: black;
+  font-family: 'Raleway', sans-serif;
+  font-weight: 600;
+  font-size: large;
 }
 
 .menu a {
   color: #fff;
   text-decoration: none;
   margin-bottom: 20px;
+  z-index: 2000;
 }
+
 
 
 
@@ -480,10 +485,10 @@ body{
         margin-right: 5vw;
        }
 
-      .logo{
-        width: 100px;
-        height: 100px;
-           
+       .logo{
+        width: 110px;
+        height: 110px;
+        top: 10px;
            }
         
       .dropdown img{
