--- a/members/templates/donation/donation_landing_page.html
+++ b/members/templates/donation/donation_landing_page.html
@@ -189,14 +189,14 @@ input.donation-box::-webkit-outer-spin-button {
                     </div>
               {% endif %}
             
-           
+       
+          <button type="submit">Submit deez nuts</button>
            
             </form>
           
-      
-              <div id="paypal-button">
-                {{paypal_payment_button.render}}
-              </div>  
+          
+             
+            
 
     </div>
     
